Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9235

LNet: Service thread pid 13033 was inactive for 0.00s.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.1, Lustre 2.11.0
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      Following call trace appeared on one of OSS servers. Interestingly, it states "inactive for 0.00s" and "pid 13033 completed after 0.00s.".
      Oct 11 13:31:28 oss23 kernel: LNet: Service thread pid 13033 was inactive for 0.00s. The thread might be hung, or it might only be slow and will resume later. Dumping the stack trace for debugging purposes:
      Oct 11 13:31:28 oss23 kernel: Pid: 13033, comm: ll_ost_io01_044
      Oct 11 13:31:28 oss23 kernel:
      Oct 11 13:31:28 oss23 kernel: Call Trace:
      Oct 11 13:31:28 oss23 kernel: [<ffffffffa083dddb>] ? ptlrpc_update_export_timer+0x4b/0x560 [ptlrpc]
      Oct 11 13:31:28 oss23 kernel: [<ffffffffa0844f75>] ? ptlrpc_server_handle_request+0x385/0xc00 [ptlrpc]
      Oct 11 13:31:28 oss23 kernel: [<ffffffffa04cd4aa>] ? lc_watchdog_touch+0x7a/0x190 [libcfs]
      Oct 11 13:31:28 oss23 kernel: [<ffffffffa083d8d9>] ? ptlrpc_wait_event+0xa9/0x2d0 [ptlrpc]
      Oct 11 13:31:28 oss23 kernel: [<ffffffff81064c00>] ? default_wake_function+0x0/0x20
      Oct 11 13:31:28 oss23 kernel: [<ffffffffa08476fd>] ? ptlrpc_main+0xadd/0x1770 [ptlrpc]
      Oct 11 13:31:28 oss23 kernel: [<ffffffffa0846c20>] ? ptlrpc_main+0x0/0x1770 [ptlrpc]
      Oct 11 13:31:28 oss23 kernel: [<ffffffff8109e78e>] ? kthread+0x9e/0xc0
      Oct 11 13:31:28 oss23 kernel: [<ffffffff8100c28a>] ? child_rip+0xa/0x20
      Oct 11 13:31:28 oss23 kernel: [<ffffffff8109e6f0>] ? kthread+0x0/0xc0
      Oct 11 13:31:28 oss23 kernel: [<ffffffff8100c280>] ? child_rip+0x0/0x20
      Oct 11 13:31:28 oss23 kernel:
      Oct 11 13:31:28 oss23 kernel: LustreError: dumping log to /tmp/lustre-log.1476160288.13033
      Oct 11 13:31:28 oss23 kernel: LNet: Service thread pid 13033 completed after 0.00s. This indicates the system was overloaded (too many service threads, or there were not enough hardware resources).

            hongchao.zhang Hongchao Zhang
            hongchao.zhang Hongchao Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: